# llm-wrapper

./: .readthedocs.yml  LICENSE  pyproject.toml  requirements.txt
docs/: llm_wrappers.io_objects.rst  llm_wrappers.rst  llm_wrappers.wrappers.rst  modules.rst
docs/source/: conf.py  index.rst  llm_wrappers.io_objects.rst  llm_wrappers.llm_config.rst  llm_wrappers.rst  llm_wrappers.utils.rst
examples/chatgpt-customer-service-bot/: chatgpt_customer_service_agent.ipynb  customer_bot.py  customer_issue.py
examples/chatgpt-customer-service-bot/data/: functions.json  sys_prompt.txt
examples/chatgpt-customer-service-bot/data/database/: order_table.csv  product_table.csv
llm-wrappers/: openai-wrapper.py
src/: pyproject.toml
src/llm_wrappers/: __init__.py  base_wrapper.py
src/llm_wrappers/extensions/: opeanai_vision.py
src/llm_wrappers/io_objects/: __init__.py  base_io_object.py  chat_object.py  completion_object.py  hf_io_object.py  llama_io_object.py  openai_io_object.py
src/llm_wrappers/llama_wrapper/: chat_object.py  config.py  helpers.py  llm_wrapper.py
src/llm_wrappers/llm_config/: __init__.py  hf_config.py  llama_config.py  openai_config.py
src/llm_wrappers/openai_wrapper/: chat_object.py  config.py  helpers.py  llm_wrapper.py
src/llm_wrappers/utils/: __init__.py  chat_interface.py  chat_object.py  config.py  io.py  llm_config.py
src/llm_wrappers/utils/constants/: modalities.py
src/llm_wrappers/wrappers/: __init__.py  anthropic_wrapper.py  base_wrapper.py  dummy_wrapper.py  hf_wrapper.py  llama_wrapper.py  openai_wrapper.py
src/llm_wrappers/wrappers/openai_wrapper/: __init__.py  openai_io_object.py  openai_wrapper.py
