[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "llm_wrappers"
version = "2.0.0-alpha.1"
authors = [
  { name="Kartik Choudhary", email="kartikchoudh@umass.edu" },
]
description = "A collection of wrappers for LLMs"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com"
"Bug Tracker" = "https://github.com"
