[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "llm_wrappers"
version = "2.0.0-alpha.4"
dependencies = [
  "numpy>=1.21.0",
  "pandas>=1.3.0"
]
authors = [
  { name="Kartik Choudhary", email="kartikchoudh@umass.edu" },
]
description = "A collection of wrappers for LLMs"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.19.0,<1.0.0"]
hf = [
  "torch",
  "transformers",
  "accelerate"
]
[project.urls]
"Homepage" = "https://github.com"
"Bug Tracker" = "https://github.com"
