[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm_wrappers"
version = "0.0.1"
authors = [
  { name="Kartik Choudhary", email="kartikchoudh@umass.edu" },
]
description = "A collection of wrappers for LLMs"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com"
"Bug Tracker" = "https://github.com"
